--- a/writeMeEverythingASP/Res/Messages.az-Latn.resx
+++ b/writeMeEverythingASP/Res/Messages.az-Latn.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AlrdFriends" xml:space="preserve">
+    <value>Siz artıq dostsunuz.</value>
+  </data>
   <data name="EmailExists" xml:space="preserve">
     <value>Bu e-poçt artıq qeydiyyatdan keçib.</value>
   </data>
