--- a/writeMeEverythingASP/Res/Messages.resx
+++ b/writeMeEverythingASP/Res/Messages.resx
@@ -120,6 +120,9 @@
   <data name="AlrdFriends" xml:space="preserve">
     <value>You are already friends.</value>
   </data>
+  <data name="AlrdReqFriend" xml:space="preserve">
+    <value>You are already send friend request.</value>
+  </data>
   <data name="EmailExists" xml:space="preserve">
     <value>This email is already registered.</value>
   </data>
@@ -140,6 +143,9 @@
   </data>
   <data name="UsrNotFound" xml:space="preserve">
     <value>User Not Found.</value>
+  </data>
+  <data name="UsrReq" xml:space="preserve">
+    <value>Friend request has been sent.</value>
   </data>
   <data name="UsrUnblocked" xml:space="preserve">
     <value>User Unblocked.</value>
