--- a/writeMeEverythingASP/Res/Messages.ru-RU.resx
+++ b/writeMeEverythingASP/Res/Messages.ru-RU.resx
@@ -117,11 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AccFriends" xml:space="preserve">
+    <value>Дружба принята.</value>
+  </data>
   <data name="AlrdFriends" xml:space="preserve">
     <value>Вы уже друзья.</value>
   </data>
   <data name="AlrdReqFriend" xml:space="preserve">
     <value>Вы уже отправили запрос добавление в друзья.</value>
+  </data>
+  <data name="DelFriends" xml:space="preserve">
+    <value>Дружба удалена.</value>
   </data>
   <data name="EmailExists" xml:space="preserve">
     <value>Этот Email уже зарегистрирован.</value>
